--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
+asn1crypto==0.22.0
+bcrypt==3.1.3
+cffi==1.10.0
+cryptography==2.0
 Django==1.11.3
-pkg-resources==0.0.0
+enum34==1.1.6
+Fabric==1.13.2
+idna==2.5
+ipaddress==1.0.18
+paramiko==2.2.1
+pyasn1==0.2.3
+pycparser==2.18
+PyNaCl==1.1.2
 pytz==2017.2
+six==1.10.0
