--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+amqp==2.2.1
 asn1crypto==0.22.0
 bcrypt==3.1.3
+billiard==3.5.0.3
+celery==4.1.0
 cffi==1.10.0
 cryptography==2.0
 Django==1.11.3
@@ -7,9 +10,11 @@ enum34==1.1.6
 Fabric==1.13.2
 idna==2.5
 ipaddress==1.0.18
+kombu==4.1.0
 paramiko==2.2.1
 pyasn1==0.2.3
 pycparser==2.18
 PyNaCl==1.1.2
 pytz==2017.2
 six==1.10.0
+vine==1.1.4
